; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_dev.c___dev_kfree_skb_any.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_dev.c___dev_kfree_skb_any.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @__dev_kfree_skb_any(%struct.sk_buff* %0, i32 %1) #0 {
  %3 = alloca %struct.sk_buff*, align 8
  %4 = alloca i32, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i64 (...) @in_irq()
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %10, label %7

7:                                                ; preds = %2
  %8 = call i64 (...) @irqs_disabled()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %7, %2
  %11 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @__dev_kfree_skb_irq(%struct.sk_buff* %11, i32 %12)
  br label %17

14:                                               ; preds = %7
  %15 = load %struct.sk_buff*, %struct.sk_buff** %3, align 8
  %16 = call i32 @dev_kfree_skb(%struct.sk_buff* %15)
  br label %17

17:                                               ; preds = %14, %10
  ret void
}

declare dso_local i64 @in_irq(...) #1

declare dso_local i64 @irqs_disabled(...) #1

declare dso_local i32 @__dev_kfree_skb_irq(%struct.sk_buff*, i32) #1

declare dso_local i32 @dev_kfree_skb(%struct.sk_buff*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
